# picomet

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  eslint.config.js  example.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: ci.yml  create-release.yml  pypi-publish.yml  release.yml
docs/: requirements.txt
docs/source/: action.rst  comet.rst  commands.rst  conf.py  deploying.rst  index.rst  installation.rst  settings.rst  testing.rst  view.rst
example/: .env  .env.example  README.md  globals.d.ts  manage.py  requirements.txt  tsconfig.json
example/apps/core/: actions.py  context_processors.py  decorators.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
example/apps/core/assets/: main.js  main.ts
example/apps/core/comets/: AccountSettings.html  Blog.html  Bookmarks.html  Home.html  New.html  ProfileSettings.html  Settings.html  User.html
example/apps/core/comets/components/: A.html  Blog.html  Bookmark.html  Login.html  Login.js  Login.ts  Navbar.html  Signup.html  Signup.js  Signup.ts
example/apps/core/comets/icons/: Account.html  Add.html
example/apps/core/migrations/: 0001_initial.py
example/comets/: Base.html  base.tailwind.css
example/comets/layouts/: Settings.html
example/project/: asgi.py  wsgi.py
example/project/settings/: base.py  dev.py  pro.py  test.py
example/requirements/: base.txt  dev.txt  test.txt
requirements/: check.txt
src/picomet/: __init__.py  apps.py  cli.py  compiler.py  consumers.py  copier.py  decorators.py  finders.py  helpers.py  http.py  loaders.py  middleware.py  parser.py  shortcuts.py  sockets.py  tailwind.js  transformer.py  types.py  urls.py  utils.py  views.py
src/picomet/assets/picomet/: comet.js  comet.ts  hmr.js  hmr.ts
src/picomet/backends/: picomet.py
src/picomet/management/commands/: build.py  newapp.py  recompile.py
src/picomet/template/: .env.example.jinja  .env.jinja  .gitignore  copier.yml  manage.py  pyproject.toml.jinja  {% if Deployment == 'Vercel' %}build.sh{% endif %}.jinja  {% if Deployment == 'Vercel' %}vercel.json{% endif %}.jinja  {% if Precommit %}.pre-commit-config.yaml{% endif %}.jinja  {% if Ruff %}pyproject.toml{% endif %}.jinja  {% if Tailwind or Prettier %}package.json{% endif %}.jinja
src/picomet/template/apps/core/: forms.py  managers.py  urls.py  views.py
src/picomet/template/comets/: Base.html.jinja
src/picomet/template/project/: asgi.py  urls.py  wsgi.py  wsgi.py.jinja
src/picomet/template/project/settings/: base.py.jinja  dev.py.jinja  pro.py.jinja
src/picomet/template/requirements/: base.txt.jinja  dev.txt.jinja
src/picomet/template/{% if VSCode %}.vscode{% endif %}/: extensions.json.jinja  launch.json  settings.json.jinja
(+3 files in other folders)
