[project]
name = "picomet"
version = "0.0.30"
authors = [{ name = "Al Mahdi", email = "picometproject@gmail.com" }]
license = { file = "LICENSE" }
description = "The nextjs of django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django>=4.2"]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
keywords = ["picomet", "django", "nextjs"]

[project.urls]
Documentation = "https://picomet.readthedocs.io"
Repository = "https://github.com/picomet/picomet"
Funding = "https://buymeacoffee.com/almahdi404"

[project.scripts]
picomet = "picomet.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true
exclude = ["env", "node_modules", ".picomet"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "UP", "F", "I", "DJ"]
fixable = ["I"]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
known-first-party = ["core"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
allow_redefinition = true
show_column_numbers = true
follow_imports = "silent"
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
files = "src/picomet/*.py,src/picomet/backends/*.py,src/picomet/management/**/*.py"
exclude = "example/**/*.py"
